--- a/webportal/content/tag-list-editor.css
+++ b/webportal/content/tag-list-editor.css
@@ -1,7 +1,7 @@
-.tags-section {
+/* .tags-section {
     display: flex;
     flex-direction: row;
-}
+} */
 
 .tags-input-container {
     display: flex;
