--- a/webportal/template/homepage/edithomepage.html
+++ b/webportal/template/homepage/edithomepage.html
@@ -3,6 +3,7 @@
 <%@ body { %>
     <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
     <script src="/content/js/he.js"></script>
     <script src="/content/js/edithomepage.js"></script>
     <link rel="stylesheet" href="/content/editpage.css">
@@ -28,7 +29,9 @@
             </div>
             <div class="sections-header">Sections:</div>
             <form onsubmit="event.preventDefault()" id="form1" action="/homepage/edit" enctype="multipart/form-data" method="POST">
-                
+                <div id="sections-container">
+
+                </div>
             </form>
             <button id="show-type-modal-button">Add section</button>
             <button id="save-homepage-sections-button">Save</button>
