--- a/webportal/template/index.html
+++ b/webportal/template/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>doublen987</title>
+    <title><%==s settings.WebsiteName %></title>
     <link rel="icon" href="/content/doublen987-logo-5.svg">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
