add images and iplocation bin, fixed stack section in the page editor

--- a/webportal/template/homepage/homepage.html
+++ b/webportal/template/homepage/homepage.html
@@ -54,7 +54,7 @@
                     imageSection, _ := section.(models.ImageSection)
             %>
                 <div class="page-section image-section">
-                    <img src="/content/images/<%=s imageSection.Image %>" class="tech-icon"/>
+                    <img src="/content/images/<%=s imageSection.Image %>" class="image-section-image"/>
                 </div>
             <%  } %>
             <%
