admin system rework

--- a/webportal/content/shared.css
+++ b/webportal/content/shared.css
@@ -18,14 +18,29 @@ main {
     min-height: 100%; 
 }
 
-.main-header {
+.headers-container {
     width: 100%;
-    height: 30px;
     position: fixed;
     top: 0;
     left: 0;
-    background-color: var(--bg-color-2);
+    z-index: 10;
+}
+
+.admin-header {
+    width: 100%;
+    height: 30px;
+    background-color: white;
+    color: black;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: large;
     padding: 0.4rem 1rem;
+    z-index: 1;
+}
+
+.main-header {
+    width: 100%;
+    height: 30px;
+    background-color: var(--bg-color-2);
     z-index: 1;
 }
 
@@ -34,19 +49,35 @@ main {
     background-color: var(--bg-color-2);
 }
 
-.nav-items {
-    margin: 0;
+.admin-nav-items {
+    margin: auto;
+    display: inline-block;
     padding-right: 20px;
-    padding-left: 80px;
+    padding-left: 20px;
+    list-style: none;
+}
+
+.admin-nav-item {
+    display: inline-block;
+    margin-right: 5px;
+    padding-top: 10px;
+}
+
+.nav-items {
+    margin: auto;
+    display: inline-block;
+    padding-right: 20px;
+    padding-left: 20px;
     list-style: none;
 }
 
 .nav-item {
     display: inline-block;
     margin-right: 5px;
+    padding-top: 10px;
 }
 
-.nav-item-left {
+.social-nav{
     float: right;
 }
 
@@ -76,20 +107,21 @@ svg:hover {
     top: 0px;
     left: 10px;
     z-index: 100;
-    position: absolute;
+    display: inline-block;
     background: var(--bg-color-1);
-    width: 70px;
-    height: 70px;
+    width: 50px;
+    height: 50px;
+    margin-left: 10px;
     border-radius: 50%;
 }
 
 .nav-icon {
-    position: absolute; 
+    position: relative; 
     top: 50%;
     left: 50%;
     transform: translate(-53%, -53%);
-    width: 40px; 
-    height: 48px;
+    width: 25px; 
+    height: 32px;
 }
 
 .nav-icon-container-clicked {
