--- a/webportal/template/admin/editsettings/editsettings.html
+++ b/webportal/template/admin/editsettings/editsettings.html
@@ -1,4 +1,4 @@
-<%: func HandleEditSettings(settings models.Settings, w io.Writer)%>
+<%: func HandleEditSettings(ctx context.Context, settings models.Settings, w io.Writer)%>
 <%~ "index.html" %>
 
 <%@ body { %>
