--- a/webportal/template/homepage/homepage.html
+++ b/webportal/template/homepage/homepage.html
@@ -1,4 +1,4 @@
-<%: func Homepage(settings models.Settings, page models.Page2, w io.Writer) %>
+<%: func Homepage(ctx context.Context, settings models.Settings, page models.Page2, w io.Writer) %>
 <%~ "index.html" %>
 <%@ body { %>
     <div class="homepage-container">
