--- a/webportal/template/login/login.html
+++ b/webportal/template/login/login.html
@@ -1,4 +1,4 @@
-<%: func HandleLogin(settings models.Settings, message string, w io.Writer) %>
+<%: func HandleLogin(ctx context.Context, settings models.Settings, message string, w io.Writer) %>
 <%~ "index.html" %>
 <%@ body { %> 
 <div class="form-container">
