--- a/webportal/template/showcase/showcase.html
+++ b/webportal/template/showcase/showcase.html
@@ -1,4 +1,4 @@
-<%: func HandleShowcase(settings models.Settings, projects []models.Project, w io.Writer) %>
+<%: func HandleShowcase(ctx context.Context, settings models.Settings, projects []models.Project, w io.Writer) %>
 <%~ "index.html" %>
 <%@ body { %>
     <div class="card-containter">
