--- a/webportal/template/homepage/edithomepage.html
+++ b/webportal/template/homepage/edithomepage.html
@@ -1,4 +1,4 @@
-<%: func HandleEditHomePage(settings models.Settings, header string, pages []models.Page, sections []models.PageSection, tags []models.Tag, w io.Writer)%>
+<%: func HandleEditHomePage(ctx context.Context, settings models.Settings, header string, pages []models.Page, sections []models.PageSection, tags []models.Tag, w io.Writer)%>
 <%~ "index.html" %>
 <%@ body { %>
     <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
