--- a/webportal/template/knowledge-timeline/editknowledgetimeline.html
+++ b/webportal/template/knowledge-timeline/editknowledgetimeline.html
@@ -1,4 +1,4 @@
-<%: func HandleEditKnowledgeTimeline(settings models.Settings, timeline []models.TimelineEvent, w io.Writer)%>
+<%: func HandleEditKnowledgeTimeline(ctx context.Context, settings models.Settings, timeline []models.TimelineEvent, w io.Writer)%>
 <%~ "index.html" %>
 <%@ body { %>
     <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
