--- a/webportal/template/post/editpost.html
+++ b/webportal/template/post/editpost.html
@@ -1,4 +1,4 @@
-<%: func HandleEditPost(settings models.Settings, posts []models.Post, tags []models.Tag, w io.Writer)%>
+<%: func HandleEditPost(ctx context.Context, settings models.Settings, posts []models.Post, tags []models.Tag, w io.Writer)%>
 <%~ "index.html" %>
 <%@ body { %>
     <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
