--- a/webportal/template/post/post.html
+++ b/webportal/template/post/post.html
@@ -1,4 +1,4 @@
-<%: func HandlePost(settings models.Settings, links []models.Link, post models.Post, w io.Writer)%>
+<%: func HandlePost(ctx context.Context, settings models.Settings, links []models.Link, post models.Post, w io.Writer)%>
 <%~ "index.html" %>
 <%@ body { %>
     <div class="main-post">
