--- a/webportal/template/tag/edittag.html
+++ b/webportal/template/tag/edittag.html
@@ -1,4 +1,4 @@
-<%: func HandleEditTag(settings models.Settings, tags []models.Tag, w io.Writer)%>
+<%: func HandleEditTag(ctx context.Context, settings models.Settings, tags []models.Tag, w io.Writer)%>
 <%~ "index.html" %>
 <%@ body { %>
     <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
