--- a/webportal/template/homepage/edithomepage.html
+++ b/webportal/template/homepage/edithomepage.html
@@ -11,7 +11,7 @@
     <div class="editor-container">
         <div class="editor-container-main">
             <div class="input-container">
-                <label>page: </label>
+                <label>Choose a page: </label>
                 <select name="selectedPageID" id="page-select">
                     <option  class="page-select-option" value="None">New post</option>
                     <% for _, page := range pages { %>
@@ -20,11 +20,11 @@
                 </select>
             </div>
             <div class="input-container">
-                <label for="page-name-input">name: </label>
+                <label for="page-name-input">Page name: </label>
                 <input id="page-name-input" name="page-name-input" type="text"></input>
             </div>
             <div class="input-container">
-                <label for="page-homepage-checkmark">homepage: </label>
+                <label for="page-homepage-checkmark">Homepage: </label>
                 <input id="page-homepage-checkmark" name="page-homepage-checkmark" type="checkbox" value="true"></input>
             </div>
             <div class="sections-header">Sections:</div>
