fixed user editing page, added users to admin nav bar, added tinyMCE plugins to editor

--- a/webportal/content/post.css
+++ b/webportal/content/post.css
@@ -4,6 +4,7 @@
     flex-wrap: nowrap;
     justify-content: flex-start;
     align-items: flex-start;
+    padding-top: 40px;
     width: 100%;
 }
 .link-holder {
