--- a/webportal/template/admin/editusers/editusers.html
+++ b/webportal/template/admin/editusers/editusers.html
@@ -7,60 +7,63 @@
     <script src="/content/js/edituser.js"></script>
 
     <div class="editor-container">
-        <form id="form1" action="/users/edit" enctype="multipart/form-data" method="POST">
-            <div class="input-container">
-                <label for="SelectedUser" class="editor-label">Choose a user:</label>
-                <select name="SelectedUser" id="chosen-user" class="editor-select">
-                    <option value="None">New user</option>
+        <div class="main-form-container">
+            <form id="form1" action="/users/edit" enctype="multipart/form-data" method="POST">
+                
+                <div class="input-container">
+                    <label for="SelectedUser" class="editor-label">Choose a user:</label>
+                    <select name="SelectedUser" id="chosen-user" class="editor-select">
+                        <option value="None">New user</option>
+                        <% for _, user := range users { %>
+                            <option value="<%=s user.ID %>"><%=s user.Username %></option>
+                            
+                        <% } %>
+                    </select>
                     <% for _, user := range users { %>
-                        <option value="<%=s user.ID %>"><%=s user.Username %></option>
+                        <div id="username-<%=s user.ID %>" style="display:none;"><%=s user.Username %></div>
+                        <div id="description-<%=s user.ID %>" style="display:none;"><%=s user.Description %></div>
+                        <div id="thumbnail-<%=s user.ID %>" style="display:none;"><%=s user.Thumbnail %></div>
                         
                     <% } %>
-                </select>
-                <% for _, user := range users { %>
-                    <div id="username-<%=s user.ID %>" style="display:none;"><%=s user.Username %></div>
-                    <div id="description-<%=s user.ID %>" style="display:none;"><%=s user.Description %></div>
-                    <div id="thumbnail-<%=s user.ID %>" style="display:none;"><%=s user.Thumbnail %></div>
-                    
-                <% } %>
-            </div>
-            <div class="input-container">
-                <label for="user-username" class="editor-label">Username: </label>
-                <input name="Username" id="user-username" class="editor-input"></input>
-            </div>
-            <div class="input-container">
-                <label for="user-password" class="editor-label">Change Password: </label>
-                <input name="Password" id="user-password" class="editor-input"></input>
-            </div>
-            <div class="input-container">
-                <label for="user-password" class="editor-label">Old Password: </label>
-                <input name="OldPassword" id="user-old-password" class="editor-input"></input>
-            </div>
-            <div class="input-container">
-                <label for="user-description" class="editor-label">Description: </label>
-                <input name="Description" id="user-description" class="editor-input"></input>
-            </div>
-            <div class="input-container">
-                <label for="user-thumbnail" class="editor-label">Thumbnail: </label>
-                <input name="Thumbnail" type="file" accept="image/*" id="user-thumbnail"></input>
-            </div>
-            <div class="input-container">
-                <img id="user-thumbnail-image" src="/content/no-image.png">
-            </div>
-            <!-- <div class="label-container">
-                <div class="editor-label">Hidden: </div>
-                <select name="Hidden" id="post-hidden" class="text" >
-                    <option id="post-hidden-option-true" value="true">True</option>
-                    <option id="post-hidden-option-false" value="false">False</option>
-                </select>
-            </div> -->
-            <input type="hidden" id="user-thumbnail-name" name="ThumbnailName" value="">
-            <div class="submit-container">
-                <button id="submit-publish" class="submit-btn submit-hidden" type="submit" name="Send" value="PUBLISH">Publish</button>
-                <button class="submit-btn" type="submit" name="Send" value="POST">Post</button>
-                <button class="submit-btn" type="submit" name="Send" value="DELETE">Delete</button>
-            </div>
-        </form>
+                </div>
+                <div class="input-container">
+                    <label for="user-username" class="editor-label">Username: </label>
+                    <input name="Username" id="user-username" class="editor-input"></input>
+                </div>
+                <div class="input-container">
+                    <label for="user-password" class="editor-label">Change Password: </label>
+                    <input name="Password" id="user-password" class="editor-input"></input>
+                </div>
+                <div class="input-container">
+                    <label for="user-password" class="editor-label">Old Password: </label>
+                    <input name="OldPassword" id="user-old-password" class="editor-input"></input>
+                </div>
+                <div class="input-container">
+                    <label for="user-description" class="editor-label">Description: </label>
+                    <input name="Description" id="user-description" class="editor-input"></input>
+                </div>
+                <div class="input-container">
+                    <label for="user-thumbnail" class="editor-label">Thumbnail: </label>
+                    <input name="Thumbnail" type="file" accept="image/*" id="user-thumbnail"></input>
+                </div>
+                <div class="input-container">
+                    <img id="user-thumbnail-image" src="/content/no-image.png">
+                </div>
+                <!-- <div class="label-container">
+                    <div class="editor-label">Hidden: </div>
+                    <select name="Hidden" id="post-hidden" class="text" >
+                        <option id="post-hidden-option-true" value="true">True</option>
+                        <option id="post-hidden-option-false" value="false">False</option>
+                    </select>
+                </div> -->
+                <input type="hidden" id="user-thumbnail-name" name="ThumbnailName" value="">
+                <div class="submit-container">
+                    <button id="submit-publish" class="submit-btn submit-hidden" type="submit" name="Send" value="PUBLISH">Publish</button>
+                    <button class="submit-btn" type="submit" name="Send" value="POST">Post</button>
+                    <button class="submit-btn" type="submit" name="Send" value="DELETE">Delete</button>
+                </div>
+            </form>
+        </div>
     </div>
 
     <script>
