--- a/webportal/template/index.html
+++ b/webportal/template/index.html
@@ -53,6 +53,9 @@
                                 <a href="/dashboard/">Dashboard</a>
                             </li>
                             <li class="admin-nav-item">
+                                <a href="/users/edit">Users</a>
+                            </li>
+                            <li class="admin-nav-item">
                                 <a href="/blog/edit">Posts</a>
                             </li>
                             <li class="admin-nav-item">
